hasqd/tests/coptest/simple/db/positive/010.sts
#!/bin/sh
$1/zdb < 010.inp
