hasqd/tests/coptest/simple/db/negative/002.sts
#!/bin/sh
$1/zdb < 002.inp
